实现登录注册功能，后端搭建完毕

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,10 @@ dependencies {
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'id.zelory:compressor:1.0.3'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.7.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.7.0'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
 
