--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AverageBillActivity"></activity>
+        <activity android:name=".AverageBillActivity"
+            android:launchMode="singleTop"></activity>
         <activity android:name=".SettleMoneyActivity"></activity>
         <activity android:name=".SignAndLogActivity"></activity>
+        <activity android:name=".BillListActivity"></activity>
         <activity android:name=".WelcomeActivity"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleTask">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
