--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.program.gyf.simplecount"
         minSdkVersion 17
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 repositories {
@@ -35,17 +36,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
+
     compile 'com.android.support:appcompat-v7:24.1.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.getbase:floatingactionbutton:1.9.0'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:design:25.3.1'
     compile 'me.drakeet.materialdialog:library:1.3.1'
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.7'
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.github.florent37:diagonallayout:1.0.2'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'id.zelory:compressor:1.0.3'
+    compile 'com.lcodecorex:tkrefreshlayout:1.0.6'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.7.0'
