--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile 'com.squareup.okio:okio:1.7.0'
     compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
 }
