--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 24
         versionCode 4
-        versionName "2.0"
+        versionName "2.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.lcodecorex:tkrefreshlayout:1.0.6'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.tomer:fadingtextview:1.8.1'
     compile 'com.squareup.okio:okio:1.7.0'
     compile 'com.yarolegovich:discrete-scrollview:1.1.3'
     compile 'cn.pedant.sweetalert:library:1.3'
