--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
                 <data android:scheme="package" />
             </intent-filter>
         </receiver>
+
+        <service android:name="service.DeleteBillService" ></service>
     </application>
 
 </manifest>
